page: add spinner

--- a/index.html.erb
+++ b/index.html.erb
@@ -7,6 +7,7 @@
 
   <link href="/css/normalize.css" media="all" rel="stylesheet" type="text/css" />
   <link href="/css/fonts.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="/css/spin.css" media="all" rel="stylesheet" type="text/css" />
 
   <%= lissio 'app' %>
 </head>
